# internal/handler/v1/request/role.go
@@ -1,0 +1,5 @@
+package request
+
+type RoleCreate struct {
+	Name string `json:"name" validate:"required,min=5"`
+}
