# internal/model/user.go
@@ -7,10 +7,11 @@ import (
 )
 
 type User struct {
-	ID        primitive.ObjectID `bson:"_id,omitempty" json:"id"`
-	Email     string             `bson:"email" json:"email"`
-	Name      string             `bson:"name" json:"name"`
-	Password  string             `bson:"password" json:"-"`
-	CreatedAt time.Time          `bson:"created_at" json:"created_at"`
-	UpdatedAt time.Time          `bson:"updated_at" json:"updated_at"`
+	ID        primitive.ObjectID   `bson:"_id,omitempty" json:"id"`
+	Email     string               `bson:"email" json:"email"`
+	Name      string               `bson:"name" json:"name"`
+	Password  string               `bson:"password" json:"-"`
+	CreatedAt time.Time            `bson:"created_at" json:"created_at"`
+	UpdatedAt time.Time            `bson:"updated_at" json:"updated_at"`
+	Roles     []primitive.ObjectID `bson:"roles" json:"-"`
 }
